fix font weight on safari

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -3,4 +3,5 @@
   src: url("/fonts/LibreFranklin-VariableFont_wght.ttf") format("truetype");
   font-style: normal;
   font-display: swap;
+  font-weight: 100 900;
 }
